--- a/composer.json
+++ b/composer.json
@@ -9,5 +9,20 @@
             "email": "jovaage@gmail.com"
         }
     ],
-    "minimum-stability": "dev"
+    "minimum-stability": "dev",
+    "require-dev": {
+      "squizlabs/php_codesniffer": "^3.0@dev",
+      "brainmaestro/composer-git-hooks": "dev-master"
+    },
+    "scripts": {
+      "post-install-cmd": "vendor/bin/cghooks add --ignore-lock",
+      "post-update-cmd": "vendor/bin/cghooks update"
+    },
+    "extra": {
+      "hooks": {
+        "pre-commit": [
+          "vendor/bin/phpcbf --standard=ruleset.xml --encoding=utf-8 -n src"
+        ]
+      }
+    }
 }
